--- a/Hello_GIS.Rmd
+++ b/Hello_GIS.Rmd
@@ -12,6 +12,8 @@ Hello_GIS
 
 Do not change the file online and local at one time.That would make the R error.
 
+This time I have tried that editing the file online. And now I want to push the change to the GitHub.
+
 This is an R Markdown document. Markdown is a simple formatting syntax for authoring HTML, PDF, and MS Word documents. For more details on using R Markdown see <http://rmarkdown.rstudio.com>.
 
 When you click the **Knit** button a document will be generated that includes both content as well as the output of any embedded R code chunks within the document. You can embed an R code chunk like this:
